--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="google0a0217fb808efb39.html" />
     <title>{% block title %}Crochet by 3 Sisters{% endblock %}</title>
 
     <!-- Google Fonts -->
